--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	</head>
 	<body>
 
-        <script src="./custom-three.js"></script>
+        <script src="./three.js/build/three.js"></script>
         <script src="./WebXR.js"></script>
         
 		<script>
