--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>MagicLeap three.js WebXR - Hello World</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <script src="./three.js/build/three.js"></script>
-    <script src="./three.js/examples/js/loaders/GLTFLoader.js"></script>
+    <script src="https://unpkg.com/ml-three/build/three.min.js"></script>
+    <script src="https://unpkg.com/ml-three/examples/js/loaders/GLTFLoader.js"></script>
     <script src="./WebXR.js"></script>
     <style>
         body {
