--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             coneMesh,
             ticker = 0;
         const loader = new THREE.GLTFLoader();
-        const OBJECTS_HEIGHT = 1.8;
+        const OBJECTS_HEIGHT = 1.6;
 
         init();
         animate();
@@ -43,6 +43,7 @@
 
             scene = new THREE.Scene();
             camera = new THREE.PerspectiveCamera(70, window.innerWidth / window.innerHeight, 0.1, 10);
+            camera.position.y = OBJECTS_HEIGHT;
             scene.add(camera);
 
             renderer = new THREE.WebGLRenderer({
