--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Magic Leap Helio - Hello WebXR (three.js)</title>
+    <title>MagicLeap Hello WebXR • Three.JS</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <script src="https://unpkg.com/magicleap-helio-webxr-polyfill@latest/HelioWebXRPolyfill"></script>
